# ReadBinaryFiles

./: CMakeLists.txt  README  read.cpp
